--- a/src/demo/CMakeLists.txt
+++ b/src/demo/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-set(Target ${CMAKE_PROJECT_NAME})
+set(Target ${PROJECT_NAME})
 
 message("\n------------------ Start generate : ${Target} ------------------")
 
@@ -10,12 +10,17 @@ file(GLOB_RECURSE CPP_SRCS *.cpp)
 set(${Target}_SRCS ${H_SRCS} ${C_SRCS} ${HPP_SRCS} ${CPP_SRCS})
 
 add_library(${Target} SHARED ${${Target}_SRCS})
+add_library(${Target}::${Target} ALIAS ${Target})
+# set_target_properties(${Target} 
+#     PROPERTIES 
+#         # OUTPUT_NAME TEST::${Target})
+#         NAMESPACE TEST)
 
 # 导出接口头文件
 set_target_properties(${Target} 
     PROPERTIES 
         PUBLIC_HEADER 
-            ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm/IAlgorithm.h
+            ${CMAKE_CURRENT_SOURCE_DIR}/IAlgorithm.h
     )
 
 message("------------------ Stop generate : ${Target} ------------------\n")
