--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,7 +7,7 @@ foreach(TEST_SRC ${TEST_SRC_LIST})
     message(STATUS "添加测试程序:${TEST_EXE_NAME}")
     
     add_executable(${TEST_EXE_NAME} ${TEST_SRC})
-
+    add_executable(${TEST_EXE_NAME}::${TEST_EXE_NAME} ALIAS ${TEST_EXE_NAME})
     # target_include_directories(${TEST_EXE_NAME} 
     #     PRIVATE
     #         ${CMAKE_CURRENT_SOURCE_DIR}
