--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,10 @@
 fail_fast: false
+
 repos:
-  - repo: https://gitee.com/huzhenhong/pre-commit-hooks-cpp
+-   repo: https://github.com/bmorcos/pre-commit-hooks-cpp
     rev: master
     hooks:
-      - id: clang-format
+    -   id: clang-format
         args: [--style=file]
-      # - id: clang-tidy
-      # - id: oclint
-      # - id: uncrustify
-      # - id: cppcheck
-      # - id: cpplint
-      # - id: include-what-you-use
+    # -   id: cpplint
+    # -   id: cppcheck
