1, add depends library cmake  2, modify pre-commit repo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ project("CMakeProjectFramework"
     )
 
 include(cmake/DetectEnvironment.cmake)
+include(cmake/AddLibrary.cmake)
 include(cmake/CompileOptions.cmake)
 include(cmake/InstallFunc.cmake)
 
