--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 fail_fast: false
 
 repos:
--   repo: https://github.com/bmorcos/pre-commit-hooks-cpp
+-   repo: https://gitee.com/huzhenhong/pre-commit-hooks-cpp-simple
     rev: master
     hooks:
     -   id: clang-format
