feat: 添加 tracy 和 toolchain.cmake

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             // 以上必须要有
             
             "environment": [],
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/build",
             "stopAtEntry": false,
             "externalConsole": false,   // 使用内部终端调试
 
